# m8esc

./: .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  arm-none-eabi-gcc.STM32H750.cmake  arm-none-eabi-gcc.cmake  openocd.jlink.cfg  openocd.stlink.cfg  wip.sh
docs/: platform_STM32F411.md
include/: ucprof_config.h
include/m8ec/: Keys.hpp  display.hpp  m8ec.h
platform/STM32F411/: CMakeLists.txt
platform/STM32F411/Core/Inc/: FreeRTOSConfig.h
platform/STM32F411/Core/Src/: main.c
platform/STM32F411/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_spi.h
platform/STM32F411/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_spi.c
platform/STM32F411/Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/: usbh_cdc.c
platform/STM32F411/Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.c
platform/STM32F411/USB_HOST/App/: usb_host.c
platform/STM32H750/: CMakeLists.txt  STM32H750.ioc  STM32H750VBTx_FLASH.ld  STM32H750VBTx_RAM.ld
platform/STM32H750/Core/Inc/: platform.h
platform/STM32H750/Core/Src/: freertos.c  main.c  system_stm32h7xx.c
platform/STM32H750/Drivers/CMSIS/: CMakeLists.txt
platform/STM32H750/Drivers/STM32H7xx_HAL_Driver/: CMakeLists.txt
platform/STM32H750/Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/: usbh_cdc.c
platform/STM32H750/Middlewares/ST/STM32_USB_Host_Library/Core/Inc/: usbh_def.h
platform/STM32H750/Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.c
platform/STM32H750/SYSVIEW/: SEGGER_SYSVIEW_FreeRTOS.h
platform/STM32H750/SYSVIEW/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
platform/STM32H750/USB_HOST/App/: usb_host.c
platform/STM32H750/config/: FreeRTOSConfig.h  ucprof_config.h
platform/STM32H750/config/SEGGER_SYSVIEW/: CMakeLists.txt  SEGGER_SYSVIEW_Config_FreeRTOS.c
source/: CMakeLists.txt  display.cpp  m8_protocol.cpp  m8ec.cpp  stdio.cpp
source/periph/: UartCallbacks.cpp  UsbCdc.cpp
source/platform/STM32H750/: Keys.cpp
tools/: m8ec.py
